Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY

{{$NEXT}}

0.009     2011-01-23
    * Handle the case where it is a fake release
    * Use is.gd to shorten URL for Twitter

0.008     2011-01-18
    * Fixed spurious warning
    * Require support for p3rl.org in GithubUpdate

0.007     2011-01-18
    * Fixed undef plugin error when no_twitter is set
    * Allow README to be dirty when releasing (again?)

0.006     2011-01-18
    * Tweet releases
    * Update github information on release
    * Relicensed under the same terms as Perl 5

0.005     2011-01-11
    * Re-upload properly - no changes since 0.004

0.004     2011-01-11
    * Avoid circular depenencies in Dist::Zilla::PluginBundle::ROKR (which provides CopyReadmeFromBuild)
    * Add Dist::Zilla::Plugin::CheckExtraTests dependency, which provides the xtest command in addition to the plugin itself
    * Fix Git::Commit so it really commits
    * Bumped version of Pod::Weaver::PluginBundle::DOHERTY

0.003     2010-11-24
    * Require Pod::Weaver::PluginBundle::DOHERTY
    * Allow README to be dirty - it always will be since we copy from build

0.002     2010-11-13
    * Fix passing skip_tests and add_tests to Dist::Zilla::PluginBundle::TestingMania

0.001     2010-10-31
    * Initial version