@@ -1,2 +1,2 @@
-Dist-Zilla-PluginBundle-DOHERTY*
+Dist-Zilla-PluginBundle-Author-DOHERTY*
 .build
