@@ -1,4 +1,4 @@
-name                = Dist-Zilla-PluginBundle-DOHERTY
+name                = Dist-Zilla-PluginBundle-Author-DOHERTY
 author              = Mike Doherty <doherty@cpan.org>
 license             = Perl_5
 copyright_holder    = Mike Doherty
