@@ -1,6 +1,9 @@
-Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY
+Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+    * Renamed to Dist::Zilla::PluginBundle::Author::DOHERTY
+    * Added support for using SurgicalPodWeaver via surgical in dist.ini
+    * Bumped minimum version of InstallRelease to hopefully detect failed installs
 
 0.009     2011-01-23
     * Handle the case where it is a fake release
